--- a/popup/style.css
+++ b/popup/style.css
@@ -1,6 +1,101 @@
+body {
+	background-color: #f0f0f4;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#title {
+	margin: auto;
+	margin-left: 0;
+	font-size: 20px;
+	text-align: left;
+}
+
+button {
+	padding: 5px;
+	border: none;
+	border-radius: 5px;
+}
+
+button.secondary {
+	background-color: #cfcfd8;
+	color: #15141a;
+}
+
+button.primary {
+	background-color: #0060df;
+	color: #ffffff;
+}
+
+button.danger {
+	background-color: #e22850;
+	color: #ffffff;
+}
+
+button.secondary:hover {
+	background-color: #bfbfc9;
+}
+
+button.primary:hover {
+	background-color: #0250bb;
+}
+
+button.danger:hover {
+	background-color: #c50042;
+}
+
+#bar {
+	text-align: right;
+	display: flex;
+	flex-direction: row;
+	margin-bottom: 5px;
+}
+
+#close {
+	padding: 2px;
+	background-color: transparent;
+	margin-left: 5px;
+}
+
+#close:hover {
+	background-color: #e0e0e6;
+}
+
 #whitelist {
-	background-color: #ccc;
+	display: flex;
+	flex-wrap: wrap;
+	background-color: #e0e0e6;
 	border-radius: 5px;
 	padding: 10px;
-	margin-top: 5px;
+	margin-top: 10px;
+	max-width: 300px;
+	row-gap: 5px;
+	column-gap: 5px;
+}
+
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: #2b2a33;
+		color: #ffffff;
+	}
+
+	#whitelist {
+		background-color: #1c1b22;
+	}
+
+	#close:hover {
+		background-color: #1c1b22;
+	}
+
+	#close-icon {
+		filter: invert(92%) sepia(1%) saturate(922%) hue-rotate(262deg) brightness(109%) contrast(97%); /* Generated via https://codepen.io/sosuke/pen/Pjoqqp */
+	}
+
+	button.secondary {
+		background-color: #42414d;
+		color: #ffffff;
+	}
+
+	button.secondary:hover {
+		background-color: #3a3944;
+	}
 }
