--- a/popup/style.css
+++ b/popup/style.css
@@ -1,6 +1,11 @@
 body {
 	background-color: #f0f0f4;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	margin: 0;
+}
+
+#content {
+	margin: 10px;
 }
 
 #title {
@@ -72,6 +77,13 @@ button.danger:hover {
 	column-gap: 5px;
 }
 
+footer {
+	background-color: #e0e0e6;
+	font-size: 12px;
+	text-align: center;
+	padding: 3px;
+}
+
 @media (prefers-color-scheme: dark) {
 	body {
 		background-color: #2b2a33;
@@ -97,5 +109,16 @@ button.danger:hover {
 
 	button.secondary:hover {
 		background-color: #3a3944;
+	}
+
+	footer {
+		background-color: #1c1b22;
+	}
+
+	a:link,
+	a:visited,
+	a:hover,
+	a:active {
+		color: #aaaaff;
 	}
 }
