--- a/popup/style.css
+++ b/popup/style.css
@@ -4,8 +4,9 @@ body {
 	margin: 0;
 }
 
-#content {
+.content {
 	margin: 10px;
+	margin-top: 0;
 }
 
 #title {
@@ -13,6 +14,13 @@ body {
 	margin-left: 0;
 	font-size: 20px;
 	text-align: left;
+}
+
+#permissions-needed {
+	display: none;
+	margin: 10px;
+	margin-top: 0;
+	max-width: 300px;
 }
 
 button {
@@ -52,6 +60,7 @@ button.danger:hover {
 	text-align: right;
 	display: flex;
 	flex-direction: row;
+	margin: 10px;
 	margin-bottom: 5px;
 }
 
